--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Noto Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -14,7 +13,7 @@ nav {
     justify-content: space-between;
 }
 
-.logo{
+.logo {
     margin: 0 23px;
     font-weight: 800;
     font-size: 25px;
@@ -33,15 +32,31 @@ ul > li {
     cursor: pointer;
 }
 
-ul > li:hover{
+ul > li:hover {
     color: white;
-
 }
 
-table, td, tr{
-    border: 2px solid black;
+table {
     border-collapse: collapse;
-    padding: 5px 13px;
+    width: auto;
+}
+
+table, td, th {
+    border: 2px solid black;
+}
+
+th, td {
+    padding: 8px 12px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+td:nth-child(2), th:nth-child(2) { 
+    padding-right: 18px;
+}
+
+td:nth-child(3), th:nth-child(3) { 
+    padding-left: 18px;
 }
 
 .container {
@@ -53,7 +68,7 @@ h1, h2, h3 {
     margin: 23px 0;
 }
 
-.btn{
+.btn {
     padding: 8px 17px;
     background: black;
     color: white;
@@ -64,17 +79,22 @@ h1, h2, h3 {
     cursor: pointer;
 }
 
-.btnsm{ 
+.btnsm {
     padding: 8px 17px;
-    background: black;
-    color: white;
+    background: transparent;
+    color: black;
     font-weight: 900;
-    border: 2px solid gray;
-    border-radius: 8px; 
+    border: none;
+    border-radius: 8px;
     cursor: pointer;
+    transition: color 0.3s;
 }
 
-img{
+.btnsm:hover {
+    color: red;
+}
+
+img {
     cursor: pointer;
     position: relative;
     bottom: 7px;
@@ -82,6 +102,14 @@ img{
     height: 13px;
 }
 
-#alert{
+#alert {
     display: none;
+}
+
+
+.fa-copy {
+    transition: color 0.3s;
+}
+.fa-copy:hover {
+    color: blue;
 }
